--- a/my-activity-page/src/sections/SecondSection/styles.module.scss
+++ b/my-activity-page/src/sections/SecondSection/styles.module.scss
@@ -63,11 +63,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: linear-gradient(
-      0deg,
-      rgba(255, 255, 255, 1) 0%,
-      rgba(255, 255, 255, 0) 100%
-    );
+    background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
     opacity: 0;
     transform: translateY(64px);
     transition: opacity 0.3s, transform 0.3s;
